@@ -3,6 +3,8 @@
 * The REST API has now reached 1.0 status
 * Kurogo is now localized. version 1.3 only includes English values. See user guide for more information on localization
 * Kurogo can now host multiple sites. The Multi-site option allows for multiple sites to be hosted on the same server. See user guide for more information.
+* An updated logging facility has been created to include logging messages in Kurogo. Please see the documentation for more information.
+* The internal statistics engine has been overhauled. Kurogo requires a database to log page views. See the documentation for more information.
 * The Map module has been significantly updated. Support for directions, arbitrary addresses and UI improvements among other improvements
 * includePackage now has a "subpackage" parameter for further organization
 * Added formButton and formSubmitbutton templates
